<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:text="@string/about"
        android:textStyle="bold"
        android:gravity="center"
        />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:src="@drawable/me"/>

    <TextView
        android:id="@+id/about_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="360dp"
        android:text="@string/name"
        android:textStyle="bold"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_name"
        android:text="@string/email"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:gravity="center"/>

    <TextView
        android:id="@+id/AboutMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:text="@string/aboutMe"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

</RelativeLayout>